# WTS

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
src/: wts.py
src/wts/: exemple.py  exemple.sql  exemple.sqlite  exemple_cmd.sql  exemple_database.sqlite  wts.py
src/wts.egg-info/: PKG-INFO  SOURCES.txt
