[tool.poetry]
name = "wts"
version = "1.0.0"
description = "Executing sql files using python for sqlite database"
authors = ["LuxLuth <luxusluth@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
