[metadata]
name = wts
version = 0.0.1
author =  Lux Luth
author_email = luxusluth@gmail.com
description = wts is a small packages for write sql insert statements in a sqlite database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Chaton-mechant/WTS
project_urls =
    Bug Tracker = https://github.com/Chaton-mechant/WTS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
